# hrrr-data

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
data/: HRRR
demos/: demo_s3_download.py  demo_s3_download_date_range.py  demo_s3_info.py  demo_s3_ls.py  demo_s3_ls_re.py  demo_tools_grib2nc.py  demo_tools_grib_list_vars.py  demo_tools_nc2nc_extract_vars.py
scripts/: ConvertHRRRSurfaceForecast2netCDF.py  ConvertHRRRv4Data2netCDF.py  DownloadHRRRSurfaceForecast.py  DownloadHRRRv4Data.py  setup-dev-env.sh  upload2anaconda.sh
src/hrrr_data/: __init__.py  hrrr_extract_surface_vars.py  hrrr_fetch_surface_forecasts.py  hrrr_plot_singlelevel_conus.py  hrrr_plotting.py  plotting.py  s3.py  s3_list_files.py  s3_list_variables.py  tools.py
src/hrrr_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_ls.py  test_s3_download.py  test_s3_download_date_range.py  test_s3_grib2nc.py  test_s3_grib_list_vars.py  test_s3_info.py  test_s3_ls.py  test_s3_ls_re.py  test_test.py  test_tools_grib2nc.py  test_tools_grib_list_vars.py  test_tools_nc2nc_extract_vars.py
