[project]
name = "hrrr-data"
version = "1.0.0"
description = "A toolkit for accessing, downloading, and processing ISD Lite data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jan Kazil" }]

dependencies = [
  "cartopy>=0.25.0",
  "matplotlib>=3.10.5",
  "pygrib>=2.1.6",
  "s3fs>=2025.7.0",
  "xarray>=2025.8.0"
]

[tool.setuptools]
script-files = [
  "scripts/DownloadHRRRSurfaceForecast.py",
  "scripts/ConvertHRRRSurfaceForecast2netCDF.py"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.11",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true
pretty = true
namespace_packages = true
mypy_path = "src"
files = ["src/hrrr_data"]

[tool.pytest.ini_options]
addopts = "-q --cov=hrrr_data --cov-report=term-missing"
testpaths = ["tests"]
