[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrrr-data"
version = "2.1.6"
description = "A toolkit for accessing, downloading, and processing HRRR Lite data"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jan Kazil" }]
dependencies = [
  "cartopy",
  "matplotlib",
  "numpy",
  "netcdf4",
  "pygrib",
  "requests",
  "s3fs",
  "xarray",
]

[project.scripts]
hrrr-fetch-sfc-forecast = "hrrr_data.hrrr_fetch_surface_forecasts:main" # Connects name of executable in $PATH to the python module containing corresponding main()
hrrr-extract-sfc-vars = "hrrr_data.hrrr_extract_surface_vars:main" # Connects name of executable in $PATH to the python module containing corresponding main()
hrrr-plot-singlelevel-conus = "hrrr_data.hrrr_plot_singlelevel_conus:main" # Connects name of executable in $PATH to the python module containing corresponding main()

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.11",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Ensure non-Python assets ship inside the wheel/sdist
#[tool.setuptools.package-data]
#hrrr_data = [
#]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.format]
quote-style = "preserve"

#
# MyPy is disabled because static analysis cannot account for all
# dynamic runtime behaviors, mypy may report false positives which
# do no reflect actual runtime issues.
#
#[tool.mypy]
##python_version = "3.11"
#warn_unused_configs = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#no_implicit_optional = true
#check_untyped_defs = true
#strict_optional = true
#pretty = true
#namespace_packages = true
#mypy_path = "src"
#files = ["src/hrrr_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
